--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -17,7 +17,7 @@
     }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1023px) {
     .dashboard-container {
         height: auto !important;
         overflow: visible !important;
